parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    PUNTOYCOMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> dec_programa dec_varglob progvar progfunc block
Rule 2     dec_programa -> PROGRAMA ID ENDLINE
Rule 3     dec_varglob -> <empty>
Rule 4     progvar -> var ENDLINE progvar
Rule 5     progvar -> vacio
Rule 6     progfunc -> function progfunc
Rule 7     progfunc -> vacio
Rule 8     var -> VAR ID arrsino DOSPUNTOS type add_var varasign
Rule 9     arrsino -> arraccess
Rule 10    arrsino -> vacio
Rule 11    add_var -> <empty>
Rule 12    push_var -> <empty>
Rule 13    varasign -> push_var ASIGNACION push_operator ssexp
Rule 14    varasign -> vacio
Rule 15    type -> INT arrsino
Rule 16    type -> FLOAT arrsino
Rule 17    type -> STRING arrsino
Rule 18    type -> BOOL arrsino
Rule 19    block -> LLAVEI optional_endline block1 LLAVED ENDLINE
Rule 20    optional_endline -> ENDLINE
Rule 21    optional_endline -> vacio
Rule 22    block1 -> statute block1
Rule 23    block1 -> vacio
Rule 24    statute -> assignment ENDLINE
Rule 25    statute -> var ENDLINE
Rule 26    statute -> condition ENDLINE
Rule 27    statute -> while ENDLINE
Rule 28    statute -> loop ENDLINE
Rule 29    statute -> functionStmt ENDLINE
Rule 30    function -> FUNC ID dec_func PARENTESISI dec_varloc params PARENTESISD function_type block
Rule 31    dec_func -> <empty>
Rule 32    dec_varloc -> <empty>
Rule 33    function_type -> DOSPUNTOS type
Rule 34    function_type -> vacio
Rule 35    params -> params1
Rule 36    params -> vacio
Rule 37    params1 -> ID DOSPUNTOS type params2
Rule 38    params2 -> COMA params1
Rule 39    params2 -> vacio
Rule 40    assignment -> ID arrsino push_id ASIGNACION push_operator ssexp
Rule 41    ssexp -> sexp ssexp_check ssexp2
Rule 42    ssexp_check -> <empty>
Rule 43    ssexp2 -> AND push_operator sexp ssexp_check
Rule 44    ssexp2 -> OR push_operator sexp ssexp_check
Rule 45    ssexp2 -> vacio
Rule 46    sexp -> exp sexp2
Rule 47    sexp2 -> MAYOR push_operator exp sexp_check
Rule 48    sexp2 -> MENOR push_operator exp sexp_check
Rule 49    sexp2 -> DIFERENTE push_operator exp sexp_check
Rule 50    sexp2 -> IGUAL push_operator exp sexp_check
Rule 51    sexp2 -> MAYORIGUAL push_operator exp sexp_check
Rule 52    sexp2 -> MENORIGUAL push_operator exp sexp_check
Rule 53    sexp2 -> vacio
Rule 54    sexp_check -> <empty>
Rule 55    exp -> term exp_check exp1
Rule 56    exp_check -> <empty>
Rule 57    exp1 -> SUMA push_operator exp
Rule 58    exp1 -> RESTA push_operator exp
Rule 59    exp1 -> vacio
Rule 60    term -> factor term_check term1
Rule 61    term_check -> <empty>
Rule 62    term1 -> MULTIP push_operator term
Rule 63    term1 -> DIVISION push_operator term
Rule 64    term1 -> vacio
Rule 65    push_operator -> <empty>
Rule 66    factor -> PARENTESISI push_fake_bottom ssexp PARENTESISD pop_fake_bottom
Rule 67    factor -> varconst
Rule 68    factor -> ID arrsino push_id
Rule 69    factor -> functioncall
Rule 70    push_id -> <empty>
Rule 71    push_fake_bottom -> <empty>
Rule 72    pop_fake_bottom -> <empty>
Rule 73    condition -> SI PARENTESISI ssexp PARENTESISD start_if_check control_block cond1 end_if_check
Rule 74    start_if_check -> <empty>
Rule 75    end_if_check -> <empty>
Rule 76    cond1 -> SINO else_check control_block
Rule 77    cond1 -> vacio
Rule 78    else_check -> <empty>
Rule 79    while -> MIENTRAS start_while_check PARENTESISI ssexp PARENTESISD mid_while_check control_block end_while_check
Rule 80    start_while_check -> <empty>
Rule 81    mid_while_check -> <empty>
Rule 82    end_while_check -> <empty>
Rule 83    loop -> REPETIR PARENTESISI ssexp PARENTESISD start_repeat_check control_block end_repeat_check
Rule 84    start_repeat_check -> <empty>
Rule 85    end_repeat_check -> <empty>
Rule 86    control_block -> LLAVEI optional_endline control_block1 LLAVED
Rule 87    control_block1 -> control_statements block1
Rule 88    control_block1 -> vacio
Rule 89    control_statements -> assignment ENDLINE
Rule 90    control_statements -> condition ENDLINE
Rule 91    control_statements -> while ENDLINE
Rule 92    control_statements -> loop ENDLINE
Rule 93    control_statements -> functionStmt ENDLINE
Rule 94    functionStmt -> functioncall
Rule 95    functioncall -> ID PARENTESISI args PARENTESISD
Rule 96    functioncall -> primitivefunc
Rule 97    args -> args1
Rule 98    args -> vacio
Rule 99    args1 -> ssexp args2
Rule 100   args2 -> COMA args1
Rule 101   args2 -> vacio
Rule 102   varconst -> CTESTRING push_string_literal
Rule 103   varconst -> CTEI push_int_literal
Rule 104   varconst -> CTEF push_float_literal
Rule 105   varconst -> boolvalue push_bool_literal
Rule 106   push_string_literal -> <empty>
Rule 107   push_int_literal -> <empty>
Rule 108   push_float_literal -> <empty>
Rule 109   push_bool_literal -> <empty>
Rule 110   arraccess -> CORCHETEI ssexp CORCHETED
Rule 111   boolvalue -> VERDADERO
Rule 112   boolvalue -> FALSO
Rule 113   primitivefunc -> ADELANTE PARENTESISI ssexp PARENTESISD
Rule 114   primitivefunc -> ATRAS PARENTESISI ssexp PARENTESISD
Rule 115   primitivefunc -> DERECHA PARENTESISI PARENTESISD
Rule 116   primitivefunc -> DERECHA PARENTESISI ssexp PARENTESISD
Rule 117   primitivefunc -> DERECHA PARENTESISI ssexp COMA ssexp PARENTESISD
Rule 118   primitivefunc -> IZQUIERDA PARENTESISI PARENTESISD
Rule 119   primitivefunc -> IZQUIERDA PARENTESISI ssexp PARENTESISD
Rule 120   primitivefunc -> IZQUIERDA PARENTESISI ssexp COMA ssexp PARENTESISD
Rule 121   primitivefunc -> ESCRIBIR PARENTESISI ssexp PARENTESISD
Rule 122   primitivefunc -> POSICION PARENTESISI ssexp COMA ssexp PARENTESISD
Rule 123   primitivefunc -> COLOR_LINEA PARENTESISI ssexp COMA ssexp COMA ssexp PARENTESISD
Rule 124   primitivefunc -> GROSOR_LINEA PARENTESISI ssexp PARENTESISD
Rule 125   primitivefunc -> COLOR_RELLENO PARENTESISI ssexp COMA ssexp COMA ssexp COMA ssexp PARENTESISD
Rule 126   primitivefunc -> COLOR_FONDO PARENTESISI ssexp COMA ssexp COMA ssexp PARENTESISD
Rule 127   primitivefunc -> SALTAR PARENTESISI ssexp PARENTESISD
Rule 128   primitivefunc -> GUARDAR_POSICION PARENTESISI PARENTESISD
Rule 129   primitivefunc -> RESTAURAR_POSICION PARENTESISI PARENTESISD
Rule 130   primitivefunc -> GUARDAR_ESTILO PARENTESISI PARENTESISD
Rule 131   primitivefunc -> RESTAURAR_ESTILO PARENTESISI PARENTESISD
Rule 132   primitivefunc -> ALZAR_PLUMA PARENTESISI PARENTESISD
Rule 133   primitivefunc -> BAJAR_PLUMA PARENTESISI PARENTESISD
Rule 134   primitivefunc -> RANDOM PARENTESISI ssexp PARENTESISD
Rule 135   vacio -> <empty>

Terminals, with rules where they appear

ADELANTE             : 113
ALZAR_PLUMA          : 132
AND                  : 43
ASIGNACION           : 13 40
ATRAS                : 114
BAJAR_PLUMA          : 133
BOOL                 : 18
COLOR_FONDO          : 126
COLOR_LINEA          : 123
COLOR_RELLENO        : 125
COMA                 : 38 100 117 120 122 123 123 125 125 125 126 126
CORCHETED            : 110
CORCHETEI            : 110
CTEF                 : 104
CTEI                 : 103
CTESTRING            : 102
DERECHA              : 115 116 117
DIFERENTE            : 49
DIVISION             : 63
DOSPUNTOS            : 8 33 37
ENDLINE              : 2 4 19 20 24 25 26 27 28 29 89 90 91 92 93
ESCRIBIR             : 121
FALSO                : 112
FLOAT                : 16
FUNC                 : 30
GROSOR_LINEA         : 124
GUARDAR_ESTILO       : 130
GUARDAR_POSICION     : 128
ID                   : 2 8 30 37 40 68 95
IGUAL                : 50
INT                  : 15
IZQUIERDA            : 118 119 120
LLAVED               : 19 86
LLAVEI               : 19 86
MAYOR                : 47
MAYORIGUAL           : 51
MENOR                : 48
MENORIGUAL           : 52
MIENTRAS             : 79
MULTIP               : 62
OR                   : 44
PARENTESISD          : 30 66 73 79 83 95 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134
PARENTESISI          : 30 66 73 79 83 95 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134
POSICION             : 122
PROGRAMA             : 2
PUNTOYCOMA           : 
RANDOM               : 134
REPETIR              : 83
RESTA                : 58
RESTAURAR_ESTILO     : 131
RESTAURAR_POSICION   : 129
SALTAR               : 127
SI                   : 73
SINO                 : 76
STRING               : 17
SUMA                 : 57
VAR                  : 8
VERDADERO            : 111
error                : 

Nonterminals, with rules where they appear

add_var              : 8
args                 : 95
args1                : 97 100
args2                : 99
arraccess            : 9
arrsino              : 8 15 16 17 18 40 68
assignment           : 24 89
block                : 1 30
block1               : 19 22 87
boolvalue            : 105
cond1                : 73
condition            : 26 90
control_block        : 73 76 79 83
control_block1       : 86
control_statements   : 87
dec_func             : 30
dec_programa         : 1
dec_varglob          : 1
dec_varloc           : 30
else_check           : 76
end_if_check         : 73
end_repeat_check     : 83
end_while_check      : 79
exp                  : 46 47 48 49 50 51 52 57 58
exp1                 : 55
exp_check            : 55
factor               : 60
function             : 6
functionStmt         : 29 93
function_type        : 30
functioncall         : 69 94
loop                 : 28 92
mid_while_check      : 79
optional_endline     : 19 86
params               : 30
params1              : 35 38
params2              : 37
pop_fake_bottom      : 66
primitivefunc        : 96
progfunc             : 1 6
programa             : 0
progvar              : 1 4
push_bool_literal    : 105
push_fake_bottom     : 66
push_float_literal   : 104
push_id              : 40 68
push_int_literal     : 103
push_operator        : 13 40 43 44 47 48 49 50 51 52 57 58 62 63
push_string_literal  : 102
push_var             : 13
sexp                 : 41 43 44
sexp2                : 46
sexp_check           : 47 48 49 50 51 52
ssexp                : 13 40 66 73 79 83 99 110 113 114 116 117 117 119 120 120 121 122 122 123 123 123 124 125 125 125 125 126 126 126 127 134
ssexp2               : 41
ssexp_check          : 41 43 44
start_if_check       : 73
start_repeat_check   : 83
start_while_check    : 79
statute              : 22
term                 : 55 62 63
term1                : 60
term_check           : 60
type                 : 8 33 37
vacio                : 5 7 10 14 21 23 34 36 39 45 53 59 64 77 88 98 101
var                  : 4 25
varasign             : 8
varconst             : 67
while                : 27 91

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . dec_programa dec_varglob progvar progfunc block
    (2) dec_programa -> . PROGRAMA ID ENDLINE

    PROGRAMA        shift and go to state 3

    programa                       shift and go to state 1
    dec_programa                   shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> dec_programa . dec_varglob progvar progfunc block
    (3) dec_varglob -> .

    VAR             reduce using rule 3 (dec_varglob -> .)
    FUNC            reduce using rule 3 (dec_varglob -> .)
    LLAVEI          reduce using rule 3 (dec_varglob -> .)

    dec_varglob                    shift and go to state 4

state 3

    (2) dec_programa -> PROGRAMA . ID ENDLINE

    ID              shift and go to state 5


state 4

    (1) programa -> dec_programa dec_varglob . progvar progfunc block
    (4) progvar -> . var ENDLINE progvar
    (5) progvar -> . vacio
    (8) var -> . VAR ID arrsino DOSPUNTOS type add_var varasign
    (135) vacio -> .

    VAR             shift and go to state 6
    FUNC            reduce using rule 135 (vacio -> .)
    LLAVEI          reduce using rule 135 (vacio -> .)

    var                            shift and go to state 7
    vacio                          shift and go to state 9
    progvar                        shift and go to state 8

state 5

    (2) dec_programa -> PROGRAMA ID . ENDLINE

    ENDLINE         shift and go to state 10


state 6

    (8) var -> VAR . ID arrsino DOSPUNTOS type add_var varasign

    ID              shift and go to state 11


state 7

    (4) progvar -> var . ENDLINE progvar

    ENDLINE         shift and go to state 12


state 8

    (1) programa -> dec_programa dec_varglob progvar . progfunc block
    (6) progfunc -> . function progfunc
    (7) progfunc -> . vacio
    (30) function -> . FUNC ID dec_func PARENTESISI dec_varloc params PARENTESISD function_type block
    (135) vacio -> .

    FUNC            shift and go to state 13
    LLAVEI          reduce using rule 135 (vacio -> .)

    function                       shift and go to state 14
    vacio                          shift and go to state 16
    progfunc                       shift and go to state 15

state 9

    (5) progvar -> vacio .

    FUNC            reduce using rule 5 (progvar -> vacio .)
    LLAVEI          reduce using rule 5 (progvar -> vacio .)


state 10

    (2) dec_programa -> PROGRAMA ID ENDLINE .

    VAR             reduce using rule 2 (dec_programa -> PROGRAMA ID ENDLINE .)
    FUNC            reduce using rule 2 (dec_programa -> PROGRAMA ID ENDLINE .)
    LLAVEI          reduce using rule 2 (dec_programa -> PROGRAMA ID ENDLINE .)


state 11

    (8) var -> VAR ID . arrsino DOSPUNTOS type add_var varasign
    (9) arrsino -> . arraccess
    (10) arrsino -> . vacio
    (110) arraccess -> . CORCHETEI ssexp CORCHETED
    (135) vacio -> .

    CORCHETEI       shift and go to state 20
    DOSPUNTOS       reduce using rule 135 (vacio -> .)

    arraccess                      shift and go to state 18
    arrsino                        shift and go to state 17
    vacio                          shift and go to state 19

state 12

    (4) progvar -> var ENDLINE . progvar
    (4) progvar -> . var ENDLINE progvar
    (5) progvar -> . vacio
    (8) var -> . VAR ID arrsino DOSPUNTOS type add_var varasign
    (135) vacio -> .

    VAR             shift and go to state 6
    FUNC            reduce using rule 135 (vacio -> .)
    LLAVEI          reduce using rule 135 (vacio -> .)

    var                            shift and go to state 7
    progvar                        shift and go to state 21
    vacio                          shift and go to state 9

state 13

    (30) function -> FUNC . ID dec_func PARENTESISI dec_varloc params PARENTESISD function_type block

    ID              shift and go to state 22


state 14

    (6) progfunc -> function . progfunc
    (6) progfunc -> . function progfunc
    (7) progfunc -> . vacio
    (30) function -> . FUNC ID dec_func PARENTESISI dec_varloc params PARENTESISD function_type block
    (135) vacio -> .

    FUNC            shift and go to state 13
    LLAVEI          reduce using rule 135 (vacio -> .)

    progfunc                       shift and go to state 23
    function                       shift and go to state 14
    vacio                          shift and go to state 16

state 15

    (1) programa -> dec_programa dec_varglob progvar progfunc . block
    (19) block -> . LLAVEI optional_endline block1 LLAVED ENDLINE

    LLAVEI          shift and go to state 25

    block                          shift and go to state 24

state 16

    (7) progfunc -> vacio .

    LLAVEI          reduce using rule 7 (progfunc -> vacio .)


state 17

    (8) var -> VAR ID arrsino . DOSPUNTOS type add_var varasign

    DOSPUNTOS       shift and go to state 26


state 18

    (9) arrsino -> arraccess .

    ASIGNACION      reduce using rule 9 (arrsino -> arraccess .)
    ENDLINE         reduce using rule 9 (arrsino -> arraccess .)
    COMA            reduce using rule 9 (arrsino -> arraccess .)
    PARENTESISD     reduce using rule 9 (arrsino -> arraccess .)
    LLAVEI          reduce using rule 9 (arrsino -> arraccess .)
    DOSPUNTOS       reduce using rule 9 (arrsino -> arraccess .)
    MULTIP          reduce using rule 9 (arrsino -> arraccess .)
    DIVISION        reduce using rule 9 (arrsino -> arraccess .)
    SUMA            reduce using rule 9 (arrsino -> arraccess .)
    RESTA           reduce using rule 9 (arrsino -> arraccess .)
    MAYOR           reduce using rule 9 (arrsino -> arraccess .)
    MENOR           reduce using rule 9 (arrsino -> arraccess .)
    DIFERENTE       reduce using rule 9 (arrsino -> arraccess .)
    IGUAL           reduce using rule 9 (arrsino -> arraccess .)
    MAYORIGUAL      reduce using rule 9 (arrsino -> arraccess .)
    MENORIGUAL      reduce using rule 9 (arrsino -> arraccess .)
    AND             reduce using rule 9 (arrsino -> arraccess .)
    OR              reduce using rule 9 (arrsino -> arraccess .)
    CORCHETED       reduce using rule 9 (arrsino -> arraccess .)


state 19

    (10) arrsino -> vacio .

    ASIGNACION      reduce using rule 10 (arrsino -> vacio .)
    ENDLINE         reduce using rule 10 (arrsino -> vacio .)
    COMA            reduce using rule 10 (arrsino -> vacio .)
    PARENTESISD     reduce using rule 10 (arrsino -> vacio .)
    LLAVEI          reduce using rule 10 (arrsino -> vacio .)
    DOSPUNTOS       reduce using rule 10 (arrsino -> vacio .)
    MULTIP          reduce using rule 10 (arrsino -> vacio .)
    DIVISION        reduce using rule 10 (arrsino -> vacio .)
    SUMA            reduce using rule 10 (arrsino -> vacio .)
    RESTA           reduce using rule 10 (arrsino -> vacio .)
    MAYOR           reduce using rule 10 (arrsino -> vacio .)
    MENOR           reduce using rule 10 (arrsino -> vacio .)
    DIFERENTE       reduce using rule 10 (arrsino -> vacio .)
    IGUAL           reduce using rule 10 (arrsino -> vacio .)
    MAYORIGUAL      reduce using rule 10 (arrsino -> vacio .)
    MENORIGUAL      reduce using rule 10 (arrsino -> vacio .)
    AND             reduce using rule 10 (arrsino -> vacio .)
    OR              reduce using rule 10 (arrsino -> vacio .)
    CORCHETED       reduce using rule 10 (arrsino -> vacio .)


state 20

    (110) arraccess -> CORCHETEI . ssexp CORCHETED
    (41) ssexp -> . sexp ssexp_check ssexp2
    (46) sexp -> . exp sexp2
    (55) exp -> . term exp_check exp1
    (60) term -> . factor term_check term1
    (66) factor -> . PARENTESISI push_fake_bottom ssexp PARENTESISD pop_fake_bottom
    (67) factor -> . varconst
    (68) factor -> . ID arrsino push_id
    (69) factor -> . functioncall
    (102) varconst -> . CTESTRING push_string_literal
    (103) varconst -> . CTEI push_int_literal
    (104) varconst -> . CTEF push_float_literal
    (105) varconst -> . boolvalue push_bool_literal
    (95) functioncall -> . ID PARENTESISI args PARENTESISD
    (96) functioncall -> . primitivefunc
    (111) boolvalue -> . VERDADERO
    (112) boolvalue -> . FALSO
    (113) primitivefunc -> . ADELANTE PARENTESISI ssexp PARENTESISD
    (114) primitivefunc -> . ATRAS PARENTESISI ssexp PARENTESISD
    (115) primitivefunc -> . DERECHA PARENTESISI PARENTESISD
    (116) primitivefunc -> . DERECHA PARENTESISI ssexp PARENTESISD
    (117) primitivefunc -> . DERECHA PARENTESISI ssexp COMA ssexp PARENTESISD
    (118) primitivefunc -> . IZQUIERDA PARENTESISI PARENTESISD
    (119) primitivefunc -> . IZQUIERDA PARENTESISI ssexp PARENTESISD
    (120) primitivefunc -> . IZQUIERDA PARENTESISI ssexp COMA ssexp PARENTESISD
    (121) primitivefunc -> . ESCRIBIR PARENTESISI ssexp PARENTESISD
    (122) primitivefunc -> . POSICION PARENTESISI ssexp COMA ssexp PARENTESISD
    (123) primitivefunc -> . COLOR_LINEA PARENTESISI ssexp COMA ssexp COMA ssexp PARENTESISD
    (124) primitivefunc -> . GROSOR_LINEA PARENTESISI ssexp PARENTESISD
    (125) primitivefunc -> . COLOR_RELLENO PARENTESISI ssexp COMA ssexp COMA ssexp COMA ssexp PARENTESISD
    (126) primitivefunc -> . COLOR_FONDO PARENTESISI ssexp COMA ssexp COMA ssexp PARENTESISD
    (127) primitivefunc -> . SALTAR PARENTESISI ssexp PARENTESISD
    (128) primitivefunc -> . GUARDAR_POSICION PARENTESISI PARENTESISD
    (129) primitivefunc -> . RESTAURAR_POSICION PARENTESISI PARENTESISD
    (130) primitivefunc -> . GUARDAR_ESTILO PARENTESISI PARENTESISD
    (131) primitivefunc -> . RESTAURAR_ESTILO PARENTESISI PARENTESISD
    (132) primitivefunc -> . ALZAR_PLUMA PARENTESISI PARENTESISD
    (133) primitivefunc -> . BAJAR_PLUMA PARENTESISI PARENTESISD
    (134) primitivefunc -> . RANDOM PARENTESISI ssexp PARENTESISD

    PARENTESISI     shift and go to state 32
    ID              shift and go to state 43
    CTESTRING       shift and go to state 58
    CTEI            shift and go to state 56
    CTEF            shift and go to state 27
    VERDADERO       shift and go to state 59
    FALSO           shift and go to state 29
    ADELANTE        shift and go to state 55
    ATRAS           shift and go to state 45
    DERECHA         shift and go to state 28
    IZQUIERDA       shift and go to state 36
    ESCRIBIR        shift and go to state 48
    POSICION        shift and go to state 44
    COLOR_LINEA     shift and go to state 31
    GROSOR_LINEA    shift and go to state 41
    COLOR_RELLENO   shift and go to state 53
    COLOR_FONDO     shift and go to state 54
    SALTAR          shift and go to state 57
    GUARDAR_POSICION shift and go to state 37
    RESTAURAR_POSICION shift and go to state 33
    GUARDAR_ESTILO  shift and go to state 50
    RESTAURAR_ESTILO shift and go to state 49
    ALZAR_PLUMA     shift and go to state 60
    BAJAR_PLUMA     shift and go to state 47
    RANDOM          shift and go to state 40

    exp                            shift and go to state 30
    term                           shift and go to state 35
    functioncall                   shift and go to state 51
    boolvalue                      shift and go to state 52
    varconst                       shift and go to state 39
    factor                         shift and go to state 38
    primitivefunc                  shift and go to state 34
    sexp                           shift and go to state 42
    ssexp                          shift and go to state 46

state 21

    (4) progvar -> var ENDLINE progvar .

    FUNC            reduce using rule 4 (progvar -> var ENDLINE progvar .)
    LLAVEI          reduce using rule 4 (progvar -> var ENDLINE progvar .)


state 22

    (30) function -> FUNC ID . dec_func PARENTESISI dec_varloc params PARENTESISD function_type block
    (31) dec_func -> .

    PARENTESISI     reduce using rule 31 (dec_func -> .)

    dec_func                       shift and go to state 61

state 23

    (6) progfunc -> function progfunc .

    LLAVEI          reduce using rule 6 (progfunc -> function progfunc .)


state 24

    (1) programa -> dec_programa dec_varglob progvar progfunc block .

    $end            reduce using rule 1 (programa -> dec_programa dec_varglob progvar progfunc block .)


state 25

    (19) block -> LLAVEI . optional_endline block1 LLAVED ENDLINE
    (20) optional_endline -> . ENDLINE
    (21) optional_endline -> . vacio
    (135) vacio -> .

    ENDLINE         shift and go to state 63
    ID              reduce using rule 135 (vacio -> .)
    VAR             reduce using rule 135 (vacio -> .)
    SI              reduce using rule 135 (vacio -> .)
    MIENTRAS        reduce using rule 135 (vacio -> .)
    REPETIR         reduce using rule 135 (vacio -> .)
    ADELANTE        reduce using rule 135 (vacio -> .)
    ATRAS           reduce using rule 135 (vacio -> .)
    DERECHA         reduce using rule 135 (vacio -> .)
    IZQUIERDA       reduce using rule 135 (vacio -> .)
    ESCRIBIR        reduce using rule 135 (vacio -> .)
    POSICION        reduce using rule 135 (vacio -> .)
    COLOR_LINEA     reduce using rule 135 (vacio -> .)
    GROSOR_LINEA    reduce using rule 135 (vacio -> .)
    COLOR_RELLENO   reduce using rule 135 (vacio -> .)
    COLOR_FONDO     reduce using rule 135 (vacio -> .)
    SALTAR          reduce using rule 135 (vacio -> .)
    GUARDAR_POSICION reduce using rule 135 (vacio -> .)
    RESTAURAR_POSICION reduce using rule 135 (vacio -> .)
    GUARDAR_ESTILO  reduce using rule 135 (vacio -> .)
    RESTAURAR_ESTILO reduce using rule 135 (vacio -> .)
    ALZAR_PLUMA     reduce using rule 135 (vacio -> .)
    BAJAR_PLUMA     reduce using rule 135 (vacio -> .)
    RANDOM          reduce using rule 135 (vacio -> .)
    LLAVED          reduce using rule 135 (vacio -> .)

    optional_endline               shift and go to state 62
    vacio                          shift and go to state 64

state 26

    (8) var -> VAR ID arrsino DOSPUNTOS . type add_var varasign
    (15) type -> . INT arrsino
    (16) type -> . FLOAT arrsino
    (17) type -> . STRING arrsino
    (18) type -> . BOOL arrsino

    INT             shift and go to state 69
    FLOAT           shift and go to state 66
    STRING          shift and go to state 65
    BOOL            shift and go to state 67

    type                           shift and go to state 68

state 27

    (104) varconst -> CTEF . push_float_literal
    (108) push_float_literal -> .

    MULTIP          reduce using rule 108 (push_float_literal -> .)
    DIVISION        reduce using rule 108 (push_float_literal -> .)
    SUMA            reduce using rule 108 (push_float_literal -> .)
    RESTA           reduce using rule 108 (push_float_literal -> .)
    MAYOR           reduce using rule 108 (push_float_literal -> .)
    MENOR           reduce using rule 108 (push_float_literal -> .)
    DIFERENTE       reduce using rule 108 (push_float_literal -> .)
    IGUAL           reduce using rule 108 (push_float_literal -> .)
    MAYORIGUAL      reduce using rule 108 (push_float_literal -> .)
    MENORIGUAL      reduce using rule 108 (push_float_literal -> .)
    AND             reduce using rule 108 (push_float_literal -> .)
    OR              reduce using rule 108 (push_float_literal -> .)
    CORCHETED       reduce using rule 108 (push_float_literal -> .)
    PARENTESISD     reduce using rule 108 (push_float_literal -> .)
    COMA            reduce using rule 108 (push_float_literal -> .)
    ENDLINE         reduce using rule 108 (push_float_literal -> .)

    push_float_literal             shift and go to state 70

state 28

    (115) primitivefunc -> DERECHA . PARENTESISI PARENTESISD
    (116) primitivefunc -> DERECHA . PARENTESISI ssexp PARENTESISD
    (117) primitivefunc -> DERECHA . PARENTESISI ssexp COMA ssexp PARENTESISD

    PARENTESISI     shift and go to state 71


state 29

    (112) boolvalue -> FALSO .

    MULTIP          reduce using rule 112 (boolvalue -> FALSO .)
    DIVISION        reduce using rule 112 (boolvalue -> FALSO .)
    SUMA            reduce using rule 112 (boolvalue -> FALSO .)
    RESTA           reduce using rule 112 (boolvalue -> FALSO .)
    MAYOR           reduce using rule 112 (boolvalue -> FALSO .)
    MENOR           reduce using rule 112 (boolvalue -> FALSO .)
    DIFERENTE       reduce using rule 112 (boolvalue -> FALSO .)
    IGUAL           reduce using rule 112 (boolvalue -> FALSO .)
    MAYORIGUAL      reduce using rule 112 (boolvalue -> FALSO .)
    MENORIGUAL      reduce using rule 112 (boolvalue -> FALSO .)
    AND             reduce using rule 112 (boolvalue -> FALSO .)
    OR              reduce using rule 112 (boolvalue -> FALSO .)
    COMA            reduce using rule 112 (boolvalue -> FALSO .)
    PARENTESISD     reduce using rule 112 (boolvalue -> FALSO .)
    CORCHETED       reduce using rule 112 (boolvalue -> FALSO .)
    ENDLINE         reduce using rule 112 (boolvalue -> FALSO .)


state 30

    (46) sexp -> exp . sexp2
    (47) sexp2 -> . MAYOR push_operator exp sexp_check
    (48) sexp2 -> . MENOR push_operator exp sexp_check
    (49) sexp2 -> . DIFERENTE push_operator exp sexp_check
    (50) sexp2 -> . IGUAL push_operator exp sexp_check
    (51) sexp2 -> . MAYORIGUAL push_operator exp sexp_check
    (52) sexp2 -> . MENORIGUAL push_operator exp sexp_check
    (53) sexp2 -> . vacio
    (135) vacio -> .

    MAYOR           shift and go to state 74
    MENOR           shift and go to state 78
    DIFERENTE       shift and go to state 76
    IGUAL           shift and go to state 72
    MAYORIGUAL      shift and go to state 75
    MENORIGUAL      shift and go to state 77
    AND             reduce using rule 135 (vacio -> .)
    OR              reduce using rule 135 (vacio -> .)
    CORCHETED       reduce using rule 135 (vacio -> .)
    PARENTESISD     reduce using rule 135 (vacio -> .)
    COMA            reduce using rule 135 (vacio -> .)
    ENDLINE         reduce using rule 135 (vacio -> .)

    sexp2                          shift and go to state 73
    vacio                          shift and go to state 79

state 31

    (123) primitivefunc -> COLOR_LINEA . PARENTESISI ssexp COMA ssexp COMA ssexp PARENTESISD

    PARENTESISI     shift and go to state 80


state 32

    (66) factor -> PARENTESISI . push_fake_bottom ssexp PARENTESISD pop_fake_bottom
    (71) push_fake_bottom -> .

    PARENTESISI     reduce using rule 71 (push_fake_bottom -> .)
    ID              reduce using rule 71 (push_fake_bottom -> .)
    CTESTRING       reduce using rule 71 (push_fake_bottom -> .)
    CTEI            reduce using rule 71 (push_fake_bottom -> .)
    CTEF            reduce using rule 71 (push_fake_bottom -> .)
    VERDADERO       reduce using rule 71 (push_fake_bottom -> .)
    FALSO           reduce using rule 71 (push_fake_bottom -> .)
    ADELANTE        reduce using rule 71 (push_fake_bottom -> .)
    ATRAS           reduce using rule 71 (push_fake_bottom -> .)
    DERECHA         reduce using rule 71 (push_fake_bottom -> .)
    IZQUIERDA       reduce using rule 71 (push_fake_bottom -> .)
    ESCRIBIR        reduce using rule 71 (push_fake_bottom -> .)
    POSICION        reduce using rule 71 (push_fake_bottom -> .)
    COLOR_LINEA     reduce using rule 71 (push_fake_bottom -> .)
    GROSOR_LINEA    reduce using rule 71 (push_fake_bottom -> .)
    COLOR_RELLENO   reduce using rule 71 (push_fake_bottom -> .)
    COLOR_FONDO     reduce using rule 71 (push_fake_bottom -> .)
    SALTAR          reduce using rule 71 (push_fake_bottom -> .)
    GUARDAR_POSICION reduce using rule 71 (push_fake_bottom -> .)
    RESTAURAR_POSICION reduce using rule 71 (push_fake_bottom -> .)
    GUARDAR_ESTILO  reduce using rule 71 (push_fake_bottom -> .)
    RESTAURAR_ESTILO reduce using rule 71 (push_fake_bottom -> .)
    ALZAR_PLUMA     reduce using rule 71 (push_fake_bottom -> .)
    BAJAR_PLUMA     reduce using rule 71 (push_fake_bottom -> .)
    RANDOM          reduce using rule 71 (push_fake_bottom -> .)

    push_fake_bottom               shift and go to state 81

state 33

    (129) primitivefunc -> RESTAURAR_POSICION . PARENTESISI PARENTESISD

    PARENTESISI     shift and go to state 82


state 34

    (96) functioncall -> primitivefunc .

    MULTIP          reduce using rule 96 (functioncall -> primitivefunc .)
    DIVISION        reduce using rule 96 (functioncall -> primitivefunc .)
    SUMA            reduce using rule 96 (functioncall -> primitivefunc .)
    RESTA           reduce using rule 96 (functioncall -> primitivefunc .)
    MAYOR           reduce using rule 96 (functioncall -> primitivefunc .)
    MENOR           reduce using rule 96 (functioncall -> primitivefunc .)
    DIFERENTE       reduce using rule 96 (functioncall -> primitivefunc .)
    IGUAL           reduce using rule 96 (functioncall -> primitivefunc .)
    MAYORIGUAL      reduce using rule 96 (functioncall -> primitivefunc .)
    MENORIGUAL      reduce using rule 96 (functioncall -> primitivefunc .)
    AND             reduce using rule 96 (functioncall -> primitivefunc .)
    OR              reduce using rule 96 (functioncall -> primitivefunc .)
    COMA            reduce using rule 96 (functioncall -> primitivefunc .)
    ENDLINE         reduce using rule 96 (functioncall -> primitivefunc .)
    CORCHETED       reduce using rule 96 (functioncall -> primitivefunc .)
    PARENTESISD     reduce using rule 96 (functioncall -> primitivefunc .)


state 35

    (55) exp -> term . exp_check exp1
    (56) exp_check -> .
